# robot-traits

./: Cargo.toml  README.md  README.tpl
examples/: find_light.rs
src/: lib.rs
src/actuators/: mod.rs
src/sensors/: mod.rs
